# time-whisperer

./: .gitignore  Cargo.toml  Makefile  README.md  VERIFICATION.md  build.rs  config_test.go  create-ubuntu-deb.sh  default.nix  flake.nix  go.mod  install.sh  log_rotation_test.go  main.go  main_test.go  package-app.sh  package-macos.sh  package-pkg.sh  reproducible-builds.md  run_integration_tests.sh  sample-config.json  simple_test.go  uninstall.sh
.github/workflows/: release.yml
configs/: test_config.json
configs/linux/: default_config.json
configs/macos/: default_config.json
configs/windows/: default_config.json
installer/resources/: conclusion.html  welcome.html
installer/scripts/: postinstall
scripts/: build.sh  sign.sh
scripts/release/: setup-signing-key.sh  verify.sh
src/: config.rs  launchagent.rs  lib.rs  logging.rs  main.rs  monitor.rs  ports.rs  server.rs  timestamp.rs
tests/: end_to_end.rs  log_rotation.rs  rotation_recovery.rs
